--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,14 @@ book:
     - index.qmd
     - intro.qmd
     - Week1.qmd
-    - Xaringan.Rmd
+    - Week2.qmd
+    - Week3.qmd
+    - Week4.qmd
+    - Week5.qmd
+    - Week6.qmd
+    - Week7.qmd
+    - Week8.qmd
+    #- Xaringan.Rmd
     - summary.qmd
     - references.qmd
 
