--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,31 @@ project:
   type: book
 
 book:
-  title: "Initial"
-  author: "T X"
-  date: "2023/1/19"
+  title: "Learning Diary - CASA0023"
+  navbar:
+    logo: general_img/satellite-clipart-icon.png
+    collapse: true
+    collapse-below: lg
+    background: light
+    #reader-mode: true
+    search: true
+    right:
+      - icon: github
+      - icon: kaggle
+  sidebar:
+    title: "CASA0023"
+    style: floating
+    reader-mode: true
+  repo-url: https://github.com/TongmengXie/CASA0023-RSCE
+  repo-actions: [issue, edit]
+  #google-analytics:
+    #tracking-id: "G-5LZK055F2X"
+    #anonymize-ip: true
+    
+  author: "Tongmeng Xie"
+  date: "2023/3/16"
   chapters:
     - index.qmd
-    - intro.qmd
     - Week1.qmd
     - Week2.qmd
     - Week3.qmd
@@ -19,16 +38,53 @@ book:
     #- Xaringan.Rmd
     - summary.qmd
     - references.qmd
+    
+  reader-mode: true
+  page-footer:
+    left: |
+      Learning Outcome at 
+      [![](/general_img/casa_logo.jpg){width=30px}](https://www.ucl.ac.uk/bartlett/casa/bartlett-centre-advanced-spatial-analysis)
+    center:
+      - text: "Module"
+        href: "https://andrewmaclachlan.github.io/CASA0023/intro.html"
+      - text: "Lecturer"
+        href: "https://github.com/andrewmaclachlan"
+    right:
+      #- icon: twitter
+        #href: https://twitter.com/quarto_pub
+        #aria-label: Quarto Twitter
+      - icon: github
+        href: https://github.com/TongmengXie/CASA0023-RSCE
+        aria-label: Quarto GitHub
+      - icon: kaggle
+        href: https://quarto.org/docs/blog/index.xml
+        aria-label: Quarto Blog RSS     
 
 bibliography: references.bib
 
 format:
   html:
-    theme: cosmo
+    css: custom.css
+    toc: true
+    theme: 
+        dark: [cosmo, darkly]
+        light: [cosmo, flatly]
+    #grid:
+      #sidebar-width: 250px
+      #body-width: 900px
+      #margin-width: 300px
+    font-size: 9px
   pdf:
     documentclass: scrreprt
+    
   docx:
     reference-doc: custom-reference-doc.docx
+    
 
 editor: visual
 
+   
+#body-header: | 
+  #This page brought to you by <https://example.com>
+#margin-header: |
+  #![https://github.com/TongmengXie](/images/logo.png)
