--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,6 +35,7 @@ book:
     - Week6.qmd
     - Week7.qmd
     - Week8.qmd
+    - Week9.qmd
     #- Xaringan.Rmd
     - summary.qmd
     - references.qmd
