--- a/_quarto.yml
+++ b/_quarto.yml
@@ -76,6 +76,7 @@ bibliography: references.bib
 
 format:
   html:
+    favicon: general_img/satellite-clipart-icon.png
     css: custom.css
     toc: true
     theme: 
