--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,16 +29,16 @@ book:
   author: "Tongmeng Xie"
   date: "2023/3/24"
   chapters:
-    - index.qmd
-    - Week1.qmd
-    - Week2.qmd
-    - Week3.qmd
-    - Week4.qmd
-    - Week5.qmd
-    - Week6.qmd
-    - Week7.qmd
-    - Week8.qmd
-    - Week9.qmd
+    - Research_Interest.qmd
+    # - Week1.qmd
+    # - Week2.qmd
+    # - Week3.qmd
+    # - Week4.qmd
+    # - Week5.qmd
+    # - Week6.qmd
+    # - Week7.qmd
+    # - Week8.qmd
+    # - Week9.qmd
     #- Xaringan.Rmd
     - summary.qmd
     - references.qmd
